--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,48 +9,48 @@ steps:
 - task: AzureCLI@1
   displayName: 'Install the CLI'
   inputs:
-    azureSubscription: 'Microsoft Azure Internal Consumption'
+    azureSubscription: 'Microsoft Azure Internal Consumption(893395a4-65a3-4525-99ea-2378c6e0dbed)'
     scriptLocation: inlineScript
     inlineScript: 'az extension add -n azure-cli-ml'
 
 - task: AzureCLI@1
   displayName: 'Attach folder to workspace'
   inputs:
-    azureSubscription: 'Microsoft Azure Internal Consumption'
+    azureSubscription: 'Microsoft Azure Internal Consumption(893395a4-65a3-4525-99ea-2378c6e0dbed)'
     scriptLocation: inlineScript
     inlineScript: 'az ml folder attach -w srrammlworkspace -g srrammlga'
 
 - task: AzureCLI@1
   displayName: 'Create compute for training'
   inputs:
-    azureSubscription: 'Microsoft Azure Internal Consumption'
+    azureSubscription: 'Microsoft Azure Internal Consumption(893395a4-65a3-4525-99ea-2378c6e0dbed)'
     scriptLocation: inlineScript
     inlineScript: 'az ml computetarget create amlcompute -n cpu --vm-size STANDARD_D2_V2 --max-nodes 4'
   
 - task: AzureCLI@1
   displayName: 'Submit script run'
   inputs:
-    azureSubscription: 'Microsoft Azure Internal Consumption'
+    azureSubscription: 'Microsoft Azure Internal Consumption(893395a4-65a3-4525-99ea-2378c6e0dbed)'
     scriptLocation: inlineScript
     inlineScript: 'az ml run submit-script -c sklearn -e test -d myenv.yml train.py'
 
 - task: AzureCLI@1
   displayName: 'Register model'
   inputs:
-    azureSubscription: 'Microsoft Azure Internal Consumption'
+    azureSubscription: 'Microsoft Azure Internal Consumption(893395a4-65a3-4525-99ea-2378c6e0dbed)'
     scriptLocation: inlineScript
     inlineScript: 'az ml model register -n mymodel -p sklearn_regression_model.pkl -t model.json'
 
 - task: AzureCLI@1
   displayName: 'Deploy model'
   inputs:
-    azureSubscription: 'Microsoft Azure Internal Consumption'
+    azureSubscription: 'Microsoft Azure Internal Consumption(893395a4-65a3-4525-99ea-2378c6e0dbed)'
     scriptLocation: inlineScript
     inlineScript: 'az ml model deploy -n acicicd -f model.json --ic inferenceConfig.yml --dc deploymentConfig.yml --overwrite'
 
 - task: AzureCLI@1
   displayName: 'Delete deployed service'
   inputs:
-    azureSubscription: 'Microsoft Azure Internal Consumption'
+    azureSubscription: 'Microsoft Azure Internal Consumption(893395a4-65a3-4525-99ea-2378c6e0dbed)'
     scriptLocation: inlineScript
     inlineScript: 'az ml service delete -n acicicd'
